@@ -1,4 +1,5 @@
-07132013 -> jonnyboy -> cleanup backfill.php
+07132013 -> jonnyboy -> typos
+						cleanup backfill.php
 07132013 -> Junkman690 -> readd RSS namespace to make the rss feeds work again. Make it point to nZEDb install for info
 07122013 -> jonnyboy -> added NNTP error checking in postprocess and nfo
 						nzb-import and grabNZBs now use site edit Crosspost time
